# hero

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Config.in  LICENSE  Makefile  Memora.yml  PREREQUISITES.md  README.md  README.txt  README_TEST.txt  aegis.json  external.desc  install.csh  ips_list.default.yml  ips_list.yml  pack_huawei.sh  pack_siemens.sh  pack_siemens_append.sh  setup.sh  sourceme.csh  test_list.sh
.gitlab-ci.d/: build-toolchain.sh  compiler-smoketest.sh  conditionally_build_bitstream.sh  llvm-project-update-hero-branch.sh  release-test.sh  test-sims.sh  tests-pulp.sh  track-pbench-perf.sh  verify-bench.sh
aegis/: .gitignore  .gitlab-ci.yml  Makefile  README.md  aegis.bashrc  aegis.json  runall.sh
aegis/freepdk45/: freepdk45.layerprops
aegis/graph/: Makefile
aegis/gtable/: Makefile
aegis/moore/: .gitignore  Makefile
aegis/morty/: .gitignore  Makefile
aegis/scripts/: genci.py  gensynth.py  hierarchy.py  parsemoore.py  parsesv2v.py  parsesynde.py  parseverible.py  parsevivado.py  util.tcl
aegis/spyglass/: .gitignore  Makefile  tests.json
aegis/sv2v/: Makefile
aegis/test/: .gitignore  Makefile
aegis/verible/: Makefile
aegis/verilator/: .gitignore  Makefile
aegis/vivado/: .gitignore  Makefile
aegis/vsim/: .gitignore  Makefile
apps/: README.md
apps/ariane/: cachetest.c
apps/ariane-support/: addentropy.c
apps/hero/: README.md
apps/hero-snitch/: .gitignore  Makefile
apps/hero-snitch/snitch-app/: CMakeLists.txt  hier_wake.c
bitstreams/: default.bit
board/: README.md
board/ariane/: linux-extras.config  post_image.sh
board/common/: boot_logo.txt  busybox.config  linux.config  post_build.sh
board/diggenesys2/: linux-extras.config  post_image.sh
board/hero/: busybox.config  post_build.sh
board/occamy/: fit_kernel_dtb.its  occamy_hero.dts  post_image.sh  vcu128-1-digilent.cfg
board/qemu/: linux-extras.config  post_image.sh
board/rv/: post_build.sh
board/xilzcu102/: bitstream.bif  genimage.cfg  hero.dts  hero.dtsi  kernel_config  post_build.sh  post_image.sh  uboot-extras.config
board/zynqmp/: S95fpga  zynqmp-hero.dts
configs/: README.md  aarch64_hero_defconfig  ariane_defconfig  genesys2_ariane_defconfig  har_defconfig  har_exilzcu102_defconfig  har_prem_defconfig  hero_aarch64_defconfig  hero_defconfig  hero_riscv64_defconfig  hrv_defconfig  hrv_ediggenesys2_defconfig  hrv_eqemu_defconfig  hrv_occamy_defconfig  pulp.sh  qemu_ariane_defconfig  qemu_defconfig  rtl.sh  zynqmp_zcu102_defconfig
doc/: BootZCU102WithoutSDCard.md  OpenMPOffloadingStack.md
doc/reference_files/: Hero_configuration.xlsx
env/: README.md  check_environment.sh  ediggenesys2.sh  ehuawei-minimal-runtime.sh  ehuawei-sdk.sh  ehuawei.sh  eoccamyvcu128.sh  esim-exilzcu102.sh  esim.sh  exilzcu102.sh  sim.sh  urania.sh
example-apps/: .gitignore  dma_tests.sh
example-apps/common/: default.mk  one_word_per_line.py
example-apps/hello/: .gitignore  Makefile  main.c
example-apps/helloworld/: .gitignore  Makefile  helloworld.c
example-apps/mchan_tests/: Makefile  Makefile.sdk  mchan_tests.h  testMCHAN_2D_ext_tcdm.c  testMCHAN_4k_crossing.c  testMCHAN_TCDM2TCDM_tx_rx.c  testMCHAN_basic.c  testMCHAN_basic_FC_TCDM.c  testMCHAN_multi_trans.c  testMCHAN_pe_fc_basic.c  testMCHAN_unaligned.c  testset.cfg
example-apps/parMatrixMul/: .gitignore  parMatrixMul.c
example-apps/tests-pulp/: Makefile  atomic.c  dma.c  floats.c  gcc_omp_parallel_for_schedule_static.c  intrinsics.c  main.c  memory.c  omp_testsuite.h  qsort.c  test.h  tests.h
gdb/: riscv.py
hardware/: .gitignore  Bender.yml  Makefile  README.md  README_DEBUG.md  tags  vcode.f  vcode.xt.f
hardware/comp/: CMakeLists.txt  makefile  vcode.f  vcode.xt.f
hardware/fpga/: .gitignore  Makefile  hero_exilzcu102.tcl  hero_exilzcu102_debug.xdc  hero_zcu102.tcl
hardware/gf22fdx/: .cockpitrc
hardware/scripts/: .gitignore  Makefile  reorg_pickle.py
hardware/sim_vivado/: makefile  tb_sim.tcl  top.sv  vcode.vivado.f  vcode.vivado.tcl
hardware/sim_vlt/: AXI_MBIT_BUS_MODEL.sv  CMakeLists.txt  DPI_TASK.sv  TB_TASK.sv  axi4_mst_bfm.sv  makefile  run.verilator.csh  top.cpp  top.sv  vcode.f
hardware/spyglass/: .gitignore  files.list  run_spyglass.sh  spyglass.tcl
hardware/src/: axi_rab_wrap.sv  axi_tcdm_if.sv  core2axi.sv  debug_system.sv  distributor.sv  dmac_wrap.sv  dmac_wrap_ooc.sv  hero.sv  hero_axi_mailbox.sv  hero_ooc.sv  l2_mem.sv  pulp.sv  pulp_cluster_cfg_pkg.sv  pulp_cluster_dma_frontend.sv  pulp_cluster_dma_frontend_regs.sv  pulp_cluster_ooc.sv  pulp_ooc.sv  soc_bus.sv  soc_ctrl_regs.sv  soc_peripherals.sv  sram.sv  tc_sram.sv  (+1 more)
include/: pulp.h
interference-experiments/: .gitignore  PS_vs_PULP  README.md  config
kernel/: alloc.c  alloc_pool.c  bench.c  crt0.S  freq-domains.c  init.c
openmp-examples/: .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md  testset.cfg
package/: Config.in  README.md
petalinux/: .gitignore  zcu102.sh
pipeline/: .gitignore  config
pulp/: README.md  setup-libprem-pulp.sh  setup-sdk.sh
rules/: pulp.mk
scripts/: bwruntests.py  generate-scripts  generate-scripts-syn  switch_site_to_default_no_tech.sh  switch_site_to_pulp.sh  switch_site_to_pulp_no_tech.sh  update-sdk
setup/: sdk_precompiled.sh  setup_env_noethz.sh  setup_eth.sh
sim/: Makefile
simulation/: makefile
support/: README.md
toolchain/: README.md  aarch64-bare.config  aarch64-linux.config  ariane-hero.config  ariane-linux.config  build-snitch-runtime.sh  build.sh  har-olinux.config  hc-omp-pass  hrv-obare.config  hrv-olinux.config  install-sdk.sh  pulp.config  setup-hero-llvm.sh  setup-libprem-pulp.sh  setup-llvm-snitch.sh  setup-llvm.sh
toolchain/llvm-support/: CMakeLists.txt
toolchain/llvm-support/OmpHostPointerLegalizer/: CMakeLists.txt  OmpHostPointerLegalizer.cpp  OmpHostPointerLegalizer.h
toolchain/llvm-support/OmpKernelWrapper/: CMakeLists.txt  OmpKernelWrapper.cpp  OmpKernelWrapper.h
tools/: README.md
util/: README.md  occamy_vcu128_flash.tcl  occamy_vcu128_flashrun.tcl  occamy_vcu128_procs.tcl  ssh_tunnel.sh
(+4728 files in other folders)
